# CIS188-Final

./: README.md  myscript.sh  package-lock.json  package.json
.github/workflows/: build-and-deploy.yaml
backend/: Dockerfile  main.py  pyproject.toml
calendar-catalog/: Chart.yaml  values.yaml
calendar-catalog/templates/: fastapi.yaml  ingress.yaml  react.yaml
data/: events.yaml
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  data.json  index.css  index.js
k8s/: fastapi.yaml  ingress.yaml  react.yaml
src/: App.jsx
