[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["dlike230 <dlike230@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.11.8"
requests = "latest"
pyyaml = "latest"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
